# python-nsjail

./: .coveragerc  .gitignore  .mypy.ini  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/patches/: nsjail-baseline-x86-64.patch
.github/scripts/: build-wheel.sh  build-wheels-manylinux.sh  build-wheels-musllinux.sh  validate_version.py
.github/workflows/: build-and-publish.yml  build-wheels.yml  python-package.yml
src/nsjail/: __init__.py  __main__.py  _compat.py  _nsjail_version.py  _stub.c  async_subprocess.py  context.py  find.py  locator.py  nsenter.py  options.py  process.py  status.py  subprocess.py  types.py  version.py
tests/: test_api.py  test_binary.py
