[build-system]
requires = ["setuptools>=80.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "nsjail"
dynamic = ["version"]
description = "Prebuilt nsjail executables for Linux"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
# Only Linux is supported (nsjail is Linux-only)
classifiers = [
    "Operating System :: POSIX :: Linux",
]

[project.urls]
Homepage = "https://github.com/google/nsjail"
Repository = "https://github.com/tanbro/python-nsjail"

[project.scripts]
nsjail = "nsjail.__main__:main"
nsjail-status = "nsjail.status:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nsjail = ["bin/*"]

[tool.setuptools_scm]
# setuptools_scm will extract version from git tags
# Recommended tag format: v1.0.0, v1.0.1, etc.
version_file = "src/nsjail/version.py"

[dependency-groups]
dev = [
    "setuptools>=80.0",
    "pytest>=8.0",
    "mypy",
]
