[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=80.0", "setuptools-scm>=8"]

[project]
name = "python-nsjail"
dynamic = ["version"]
description = "Pre-built nsjail executable and library for Python developers"
readme = "README.md"
authors = [{ name = "tanbro", email = "tanbro@163.com" }]
license = "Apache-2.0"
requires-python = ">=3.9"

dependencies = [
  "typing-extensions>=3.9.0; python_version < '3.11'",
]

keywords = [
  "sandbox",
  "nsjail",
  "linux",
  "security",
  "process-isolation",
  "chroot",
  "linux-namespaces",
  "seccomp-bpf-policies",
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Topic :: Security",
  "Topic :: System :: Systems Administration",
  "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/tanbro/python-nsjail"
Repository = "https://github.com/tanbro/python-nsjail"
Documentation = "https://github.com/tanbro/python-nsjail/blob/main/README.md"
"Bug Tracker" = "https://github.com/tanbro/python-nsjail/issues"
Changelog = "https://github.com/tanbro/python-nsjail/releases"

[project.scripts]
nsjail = "nsjail.__main__:main"
nsjail-status = "nsjail.status:main"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nsjail = ["nsjail"]

[tool.setuptools_scm]
version_file = "src/nsjail/version.py"

[dependency-groups]
dev = [
  "setuptools>=80.0",
  "pytest",
  "pytest-asyncio",
  "pytest-cov",
  "mypy",
]
